syntax = "proto3";

package sequence.v1.image;

import "api/types/image.proto";
import "api/types/empty.proto";

option go_package = "github.com/frantjc/sequence/api/v1/image";

service Image {
    rpc PullImage(PullImageRequest) returns (PullImageResponse);
    rpc PruneImages(sequence.types.Empty) returns (sequence.types.Empty);
}

message PullImageRequest {
    string ref = 1;
}

message PullImageResponse {
    sequence.types.Image image = 1;
}
